--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,12 +1,18 @@
 FROM node:lts-alpine
 
 RUN apk --no-cache add curl
+RUN apk add make g++ python3 git
+RUN npm i -g node-pre-gyp
 
 WORKDIR /app
-COPY package*.json ./
+
+COPY package.json package.json
+COPY package-lock.json package-lock.json
+
 RUN npm i
 
-COPY tsconfig.json tsconfig.json
 COPY src src
+
+COPY tsconfig.json tsconfig.json
 
 CMD npm start
