--- a/back/package.json
+++ b/back/package.json
@@ -11,15 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.10.3",
-    "class-validator": "^0.13.2",
+    "argon2": "^0.30.2",
+    "dotenv": "^16.0.3",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "prettier": "^2.7.1",
-    "reflect-metadata": "^0.1.13",
-    "sqlite3": "^5.1.1",
+    "ts-node-dev": "^2.0.0",
     "type-graphql": "^1.1.1",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
@@ -27,7 +29,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.5",
     "eslint-plugin-promise": "^6.0.1",
-    "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   }
 }
